Create backend, add linkable examples (#39)
* Add CachedDoc#qualifiedName
* Make CommonDocsHandlers#getDocMessageData suspend